--- a/http/static/index.html
+++ b/http/static/index.html
@@ -6,6 +6,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="css/bootstrap.css"/>
+        <link rel="stylesheet" type="text/css" href="css/bootstrap-glyphicons.css"/>
         <style>[ng-cloak] { display: none; }</style>
     </head>
     <body>
@@ -14,27 +15,31 @@
 				<h2>recently updated</h2>
             </div>
 			<div id="main" class="container" ng-cloak>
-				<div id="root-list">
-					<div ng-repeat="root in mediaRoots">
-						<div class="row media-root">
-							<div class="col-lg-8"><h3>{{root}}/</h3></div>
-						</div>
-						<div ng-repeat="m in mediaByRoot[root]" class="row media rooted">
-							<div class="col-lg-4">
-								<strong>{{m.basename}}</strong>
-							</div>
-							<div class="col-lg-3 media-progress in-progress">
-								<div ng-repeat="u in usersInProgress[m.mediaId]">
-									{{u.userId}}
-								</div>
-							</div>
-							<div class="col-lg-3 media-progress finished">
-								<div ng-repeat="u in usersFinished[m.mediaId]">
-									{{u.userId}}
-								</div>
-							</div>
-						</div>
-					</div>
+                <div ng-repeat="root in mediaRoots">
+                    <div class="row media-root">
+                        <div class="col-12 col-sm-12 col-lg-12"><h3>{{root}}/</h3></div>
+                    </div>
+                    <div ng-repeat="m in mediaByRoot[root]" class="row media rooted">
+                        <div class="col-6 col-sm-6 col-lg-6">
+                            <div>
+                                <strong>{{m.basename}}</strong>
+                            </div>
+                            <div class="media-progress">
+                                <span class="glyphicon glyphicon-user in-progress" data-userid="{{u.userId}}" ng-repeat="u in usersInProgress[m.mediaId]"></span>
+                                <span class="glyphicon glyphicon-user finished" data-userid="{{u.userId}}" ng-repeat="u in usersFinished[m.mediaId]"></span>
+                            </div>
+                        </div>
+                        <div class="col-6 col-sm-6 col-lg-6 media-action">
+                            <div class="btn-group">
+                                <button type="button" class="btn btn-primary">
+                                    <span class="glyphicon glyphicon-play"></span>
+                                </button>
+                                <button type="button" class="btn btn-primary">
+                                    <span class="glyphicon glyphicon-tasks"></span>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div id="footer" ng-cloak>
