--- a/http/static/index.html
+++ b/http/static/index.html
@@ -33,8 +33,11 @@
                         </div>
                         <div ng-show="verified" class="col-6 col-sm-6 col-lg-6 media-action">
                             <div class="btn-group">
-                                <button type="button" class="btn btn-primary">
+                                <button ng-show="mediaUnwatched(m.mediaId)" type="button" class="btn btn-primary">
                                     <span class="glyphicon glyphicon-play"></span>
+                                </button>
+                                <button ng-show="mediaStarted(m.mediaId)" type="button" class="btn btn-primary">
+                                    <span class="glyphicon glyphicon-check"></span>
                                 </button>
                                 <button type="button" class="btn btn-primary">
                                     <span class="glyphicon glyphicon-tasks"></span>
