--- a/http/static/index.html
+++ b/http/static/index.html
@@ -22,18 +22,17 @@
                         <div><h3>{{root}}/</h3></div>
                     </div>
                     <div ng-repeat="m in mediaByRoot[root]" class="media rooted">
-                        <div class="col-4 col-sm-4 col-lg-5">
-                            <strong>{{m.basename}}</strong>
+                        <div class="col-5 col-sm-5 col-lg-5" style="overflow:hidden;text-overflow:ellipsis;">
+                            {{m.basename}}
+                            <div>
+                                {{m.modified | moment:'ago'}}
+                            </div>
                             <div class="media-progress">
                                 <span class="glyphicon glyphicon-eye-open in-progress" data-userid="{{u.userId}}" ng-repeat="u in usersInProgress[m.mediaId]"></span>
                                 <span class="glyphicon glyphicon-flag finished" data-userid="{{u.userId}}" ng-repeat="u in usersFinished[m.mediaId]"></span>
                             </div>
                         </div>
                         <div ng-show="verified" class="col-6 col-sm-6 col-lg-7 media-action">
-                            <div class="col-5 hidden-sm col-lg-3"
-                                 style="padding-top:0.3em;"><!-- shitty style hack -->
-                                {{m.modified | moment:'ago'}}
-                            </div>
                             <div class="btn-toolbar">
                                 <div class="btn-group">
                                     <button class="btn btn-link"
@@ -43,8 +42,13 @@
                                     </button>
                                     <button class="btn btn-link"
                                             ng-click="startMedia(m.mediaId)"
-                                            ng-disabled="mediaStarted(m.mediaId)"> 
+                                            ng-show="mediaUnwatched(m.mediaId)"> 
                                         <span class="glyphicon glyphicon-play"></span>
+                                    </button>
+                                    <button class="btn btn-link"
+                                            ng-click="startMedia(m.mediaId)"
+                                            ng-hide="mediaUnwatched(m.mediaId)"> 
+                                        <span class="glyphicon glyphicon-repeat"></span>
                                     </button>
                                     <button class="btn btn-link"
                                             ng-click="finishMedia(m.mediaId)"
@@ -53,7 +57,18 @@
                                     </button>
                                 </div>
                                 <div class="btn-group hidden-sm">
-                                    <button class="btn">???</button>
+                                    <button class="btn btn-default">
+                                        <span ng-show="mediaUnwatched(m.mediaId)">
+                                            unwatched
+                                        </span>
+                                        <span ng-show="mediaStarted(m.mediaId)">
+                                            started
+                                        </span>
+                                        <span ng-show="mediaFinished(m.mediaId)">
+                                            finished
+                                        </span>
+                                        <span class="caret"></span>
+                                    </button>
                                 </div>
                             </div>
                         </div>
